# aj-qic-sessiondata-update

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements-test.txt
infrastructure/: template.yaml
src/: index.py
tests/: __init__.py  fixtures.py  test_fixtures.py  test_index.py
