[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "connect-qic-session-data-update"
version = "1.0.0"
description = "Amazon Connect Q Connect Session Data Updater Lambda Function"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Ankit Jain", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.26.0",
]

[project.urls]
Homepage = "https://github.com/iamankitjain/Q_IN_CONNECT/connect-qic-session-data-update"
Repository = "https://github.com/iamankitjain/Q_IN_CONNECT/connect-qic-session-data-update"
Issues = "https://github.com/iamankitjain/Q_IN_CONNECT/connect-qic-session-data-update/issues"

[tool.setuptools]
py-modules = ["index"]